# Projeto_Maximizacao_Receita

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE.md  Projeto_Maximizacao_Receita_Final.ipynb  README.md  best_model_max_receita.pkl  commit_dates.json  coverage.json  dvc.yaml  params.yaml  primeiro_commit.txt  pyproject.toml  requirements-ci.txt  requirements.txt  ruff.toml  setup.cfg  tmp_cb.txt  tox.ini
.dvc/: config
.ipynb_checkpoints/: Projeto_Maximizacao_Receita_01-checkpoint.ipynb  Projeto_Maximizacao_Receita_Final-checkpoint.ipynb  README-checkpoint.md  auxiliares_testes-checkpoint.py
artifacts/: .gitignore  metrics.json
dados/: .gitkeep  README.md  dadosVenda.xlsx  dadosVenda.xlsx.dvc
docs/: app.js  curve_business_metric.csv  index.html  model_best_meta.json  model_params.json  policy_otima_resumo.csv  styles.css
models/: best_model_max_receita.pkl  curve_business_metric.csv  metrics_snapshot.csv  metrics_snapshot.json  model_best.onnx  model_linear.json
notebooks/: 01_Projeto_Maximizacao_Receita_Inicial.ipynb  02_Projeto_Maximizacao_Receita_EDA_Preprocess.ipynb  03_Projeto_Maximizacao_Receita_Modelagem_Validacao.ipynb  04_Diagnostico_Receita_e_Politicas.ipynb  Projeto_Maximizacao_Receita_01.ipynb  Projeto_Maximizacao_Receita_EDA_Preprocess.ipynb  Projeto_Maximizacao_Receita_Final.ipynb
report/: commit_schedule_2022_Jan_Jun.md
scripts/: commit_2022.ps1  exec_notebook.py  filter_cb.py  mlflow_best_model_snapshot.py  mlflow_mark_best_in_main.py  rewrite_git_history.py  update_readme.py
src/: experiments.py  train.py
(+248 files in other folders)
