[project]
name = "projeto_maximizacao_receita"
version = "0.1.0"
description = "Pipeline de regressão com MLOps (DVC/MLflow/DagsHub)"
requires-python = ">=3.10"
readme = "README.md"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
